# XiwuCLAW

./: .gitignore  CMakeLists.txt  README-PROBE.md  README.md  TEST_NAMEDPIPE.md
scripts/: deploy-live.ps1
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src-probe/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tones/: migration_map.json
tones/factory/: bass_abyss_mono.json  bass_acid_claw.json  bass_cinder_drop.json  bass_gloom_motor.json  bass_harbor_grit.json  bass_iron_pulse.json  bass_midnight_resin.json  bass_prompt_hybrid.json  bass_rain_tunnel.json  bass_saw_anvil.json  bass_triphop_dust.json  bass_velvet_sub.json  example_instrument_audio.json  example_instrument_clean.json  fx_blackout_riser.json  fx_chrome_burst.json  fx_comet_tail.json  fx_dust_echo.json  fx_glass_fall.json  fx_lunar_crash.json  fx_orbit_glitch.json  fx_radar_ping.json  fx_shiver_noise.json  fx_storm_sweep.json  fx_torn_air.json  layered_bass_core.json  layered_bass_eq4.json  lead_arc_laser.json  lead_brass_comet.json  lead_copper_ray.json  lead_frost_bite.json  lead_glass_fang.json  lead_mirror_shout.json  lead_neon_ribbon.json  lead_pixel_cry.json  lead_plasma_flute.json  lead_solar_wire.json  lead_vapor_blade.json  pad_aurora_veil.json  pad_cathedral_air.json  (+20 more)
tones/schema/: tone_spec_v1.schema.json
tools/tone_migration/: README.md  batch_convert_factory.py  tone_json_to_faust.py
